--- a/core/checkout/include_cart_start.phtml
+++ b/core/checkout/include_cart_start.phtml
@@ -1,10 +1,10 @@
 <!--#INCLUDE FILE="../../local/local.phtml"-->
 <!--#INCLUDE FILE="../i_initsession.phtml"-->
 <!--#INCLUDE FILE="../i_adoopen.phtml"-->
-<!--#INCLUDE FILE="../../language_pack.phtml"-->
 <!--#INCLUDE FILE="../../util/xt_func_session.phtml"-->
 <!--#INCLUDE FILE="../../util/xt_func_string.phtml"-->
 <!--#INCLUDE FILE="../../util/xt_func_util.phtml"-->
+<!--#INCLUDE FILE="../../util/xt_func_client.phtml"-->
 <!--#INCLUDE FILE="../../util/xt_func_shoppingcart.phtml"-->
 <%
 	sessionID = Request("sessionID")
