--- a/theme/journal4/cart.phtml
+++ b/theme/journal4/cart.phtml
@@ -1,25 +1,31 @@
 <%
 	Response.CodePage = 65001
 	Response.CharSet = "UTF-8"
-	g_route_page_id = "index"
+	g_route_page_id = "cart"
 %>
 <!--#INCLUDE FILE="template_setting.phtml"-->
-<!--#INCLUDE FILE="../../core/include_index_start.phtml"-->
+<!--#INCLUDE FILE="../../core/checkout/include_cart_start.phtml"-->
 <!DOCTYPE html>
 <html dir="ltr" lang="en" class="webkit chrome chrome53 win journal-desktop is-guest skin-4 header-center header-center-sticky product-grid-second-image product-list-second-image home-page layout-1 route-common-home oc2 one-column">
 <head>
 <!--#INCLUDE FILE="include/head.phtml"-->
+<style>
+#sp_method label {
+    float: inherit;
+    display: inline;
+}
+</style>
 </head>
 <body>
 <!--#INCLUDE FILE="include/after_body_start.phtml"-->
 <header class="journal-header-center nolang-nocurr">
 <!--#INCLUDE FILE="include/header.phtml"-->
 </header>
-<!--#INCLUDE FILE="custom/index_top.phtml"-->
 <div class="extended-container">
-<!--#INCLUDE FILE="include/index.phtml"-->	
+<!--#INCLUDE FILE="include/cart.phtml"-->
 </div>
 <footer class="boxed-footer">
+<!--#INCLUDE FILE="include/footer.phtml"-->
 </footer>
 <div class="scroll-top">
 </div>
@@ -28,5 +34,4 @@
 <!--#INCLUDE FILE="include/AbsoluteFooter.phtml"-->
 </body>
 </html>
-<!--#INCLUDE FILE="../../core/include_index_end.phtml"-->
-
+<!--#INCLUDE FILE="../../core/checkout/include_cart_end.phtml"-->
