--- a/theme/journal4/template_setting.phtml
+++ b/theme/journal4/template_setting.phtml
@@ -21,4 +21,6 @@ EC_imageWidth = "500"
 EC_imageHeight = "500"
 EC_zoomWidth = "700"
 EC_zoomHeight = "700"
+EC_miniCartWidth = "100"
+EC_miniCartHeight = "100"
 %>
