--- a/admin/catalog_attribute_detail.phtml
+++ b/admin/catalog_attribute_detail.phtml
@@ -33,61 +33,7 @@
 	'===============================================================================================
 	s_data = ""
 	
-	sql = "SELECT a.option_id, b.value, a.sort_order FROM " & g_storeid & "_eav_attribute_option as a, "
-	sql = sql & g_storeid & "_eav_attribute_option_value as b "
-	sql = sql & "WHERE a.option_id = b.option_id AND "
-	sql = sql & "b.view_id = " & Session("CURRENT_ADMIN_VIEW_ID") & " AND "
-	sql = sql & "a.attribute_id =" & attribute_id
 	
-	if Session("CURRENT_ADMIN_VIEW_ID") = "1" then
-		sql = "SELECT option_id, option_name, sort_order, display_name FROM " & g_storeid & "_eav_attribute_option WHERE attribute_id =" & attribute_id & " ORDER BY sort_order, option_name"
-	else
-		'sql = "SELECT option_id, (CASE WHEN b.field_value IS NULL THEN a.option_name ELSE b.field_value END) as oname, a.sort_order FROM " & g_storeid & "_eav_attribute_option as a "
-		'sql = sql & "LEFT OUTER JOIN " & g_storeid & "_store_type_data_varchar as b "
-		'sql = sql & "ON CONVERT(varchar(10), a.option_id) = b.entity_id "
-		'sql = sql & "WHERE attribute_id = 1 "
-		'sql = sql & "AND (type_id is null OR type_id=21) "
-		'sql = sql & "AND (view_id is null or view_id=" & Session("CURRENT_ADMIN_VIEW_ID") & ") "
-		'sql = sql & "ORDER BY sort_order, oname "
-		
-		sql = "SELECT option_id, (CASE WHEN b.field_value IS NULL THEN a.option_name ELSE b.field_value END) as oname, a.sort_order  "
-		sql = sql & "FROM " & g_storeid & "_eav_attribute_option as a "
-		sql = sql & "LEFT OUTER JOIN (SELECT * FROM " & g_storeid & "_store_type_data_varchar WHERE type_id=21 and view_id=" & Session("CURRENT_ADMIN_VIEW_ID") & ") as b "
-		sql = sql & "ON CONVERT(varchar(10), a.option_id) = b.entity_id "
-		sql = sql & "WHERE attribute_id = " & attribute_id & " "
-		sql = sql & "ORDER BY sort_order, oname "
-	end if
-	
-	set rsOptions = dbconn.Execute(sql)
-	attr_id = 1
-	do while not rsOptions.EOF
-		s_value = Trim(rsOptions(1))
-		s_display_name = Trim(rsOptions(3))
-		
-		if Len(s_value) > 0 then
-			s_value = Replace(Trim(rsOptions(1)), """", "\""")
-		end if
-		if Len(s_display_name) > 0 then
-			s_display_name = Replace(Trim(rsOptions(3)), """", "\""")
-		end if
-		'TODO : translate...
-		'if Session("CURRENT_ADMIN_VIEW_ID") <> "1" then
-			's_value = TranslateX(s_value, 21, rsOptions(0), 1)
-		'end if
-		's_data = s_data & "{ ""ID"": " & attr_id & ",  ""OptionID"": " & rsOptions(0) & ", ""Name"": """ & s_value & """, ""Position"": """ & Trim(rsOptions(2)) & """ },"
-		
-		s_data = s_data & "{ ""ID"": " & attr_id & ",  ""OptionID"": " & rsOptions(0) & ", ""Name"": """ & s_value & """, ""Position"": """ & Trim(rsOptions(2)) & """,  ""DisplayName"": """ & s_display_name & """ },"
-		attr_id = attr_id + 1
-		rsOptions.MoveNext
-	loop
-	rsOptions.Close
-	set rsOptions = nothing
-	
-	if Len(s_data) > 0 then
-		s_data = Left(s_data, Len(s_data) - 1)
-	end if
-	s_data = "[" & s_data & "]"
-	s_data_option = s_data
 		
 	
 %>
@@ -96,7 +42,10 @@
 <!--#INCLUDE FILE="include/head.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
 <link rel="stylesheet" href="assets/plugins/jquery-ui/jquery-ui-1.10.4.custom.min.css" />
-<link rel="stylesheet" type="text/css" href="assets/plugins/grid/grid-0.5.6.min.css" />
+<link href="../assets/global/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" />
+<link href="../assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="../assets/global/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" rel="stylesheet" type="text/css" />
+<link href="../assets/global/plugins/fancybox/source/jquery.fancybox.css" rel="stylesheet" type="text/css" />
 <!-- END PAGE LEVEL PLUGINS -->
 <!--#INCLUDE FILE="include/head_bottom.phtml"-->
 </head>
@@ -228,32 +177,83 @@
 															</div>
 															<div class="tab-pane" id="panel_tab4_example2">
 																<div class="row">
-																	<div class="col-md-8">
-																		<% if Session("CURRENT_ADMIN_VIEW_ID") = "1" then %>
-																		<a class="btn green btn-xs" role="button" id="btnAdd0">
-																		<i class="fa fa-plus"></i> Add New 
-																		</a>
-																		<br><br>
-																		<% end if %>
-																		<table id="grid0"></table>
-																		<div id="dialog-option" style="display:none">
-																			<input type="hidden" id="ID">
-																			<input type="hidden" id="OptionID">
-																			<table border="0">
-																				<tbody>
-																				<tr>
-																					<td style="padding:5px;"><label for="OptionName">Name:</label></td>
-																					<td style="padding:5px;"><input type="text" id="OptionName" style="width:300px;font-size:14px;"></td>
-																				</tr>
-																				<tr>
-																					<td style="padding:5px;"><label for="DisplayName">Display:</label></td>
-																					<td style="padding:5px;"><input type="text" id="DisplayName" style="width:300px;font-size:14px;"></td>
-																				</tr>
-																				<tr>
-																					<td style="padding:5px;"><label for="OptionPosition">Postition:</label></td>
-																					<td style="padding:5px;"><input type="text" id="OptionPosition" style="width:300px;font-size:14px;"></td>
-																				</tr>
-																				</tbody>
+																	<div class="col-md-12">
+																		<div class="table-container">
+																			<div class="table-actions-wrapper">
+																				<span> </span>
+																				<select class="table-group-action-input form-control input-inline input-small input-sm">
+																					<option value="">Select...</option>
+																					<option value="active">Active</option>
+																					<option value="inactive">Inactive</option>
+																					<option value="delete">Delete</option>
+																				</select>
+																				<button class="btn btn-sm btn-success table-group-action-submit">
+																					<i class="fa fa-check"></i> Submit</button>
+																			</div>
+																			<table class="table table-striped table-bordered table-hover table-checkable" id="datatable_products">
+																				<thead>
+																					<tr role="row" class="heading">
+																						<th width="1%">
+																							<label class="mt-checkbox mt-checkbox-single mt-checkbox-outline">
+																								<input type="checkbox" class="group-checkable" data-set="#sample_2 .checkboxes" />
+																								<span></span>
+																							</label>
+																						</th>
+																						<th width="8%"> ID </th>
+																						<th width="5%"> &nbsp; </th>
+																						<th width="100"> Option Name </th>
+																						<th width="100"> Option Display </th>
+																						<th width="100"> Description </th>
+																						<th width="8%"> Manufacturer </th>
+																						<th width="8%"> Sort Order </th>
+																						<th width="5%"> Actions </th>
+																					</tr>
+																					<tr role="row" class="filter">
+																						<td> </td>
+																						<td>
+																							
+																						</td>
+																						<td> </td>
+																						<td>
+																							<input type="text" class="form-control form-filter input-sm" name="option_name" value=""> 
+																						</td>
+																						<td>
+																							<input type="text" class="form-control form-filter input-sm" name="option_display_name" value=""> 
+																						</td>
+																						<td>
+																							<input type="text" class="form-control form-filter input-sm" name="option_description" value=""> 
+																						</td>
+																						<td>
+																							<select name="option_mfg" class="form-control form-filter input-sm">
+																								<option value="">Select...</option>
+																								<%
+																									sql = "SELECT * FROM " & g_storeid & "_mfg ORDER BY mfg_name"
+																									set rsM = dbconn.Execute(sql)
+																									do while not rsM.EOF
+																								%>
+																								<option value="<%=rsM("mfg_id")%>"><%=rsM("mfg_name")%></option>
+																								<%
+																										rsM.MoveNext
+																									loop
+																									rsM.Close
+																									set rsM = nothing
+																								%>
+																							</select>
+																						</td>
+																						<td>
+																							
+																						</td>
+																						<td>
+																							<div class="margin-bottom-5">
+																								<button class="btn btn-sm btn-success filter-submit margin-bottom">
+																									<i class="fa fa-search"></i> Search</button>
+																							</div>
+																							<button class="btn btn-sm btn-default filter-cancel">
+																								<i class="fa fa-times"></i> Reset</button>
+																						</td>
+																					</tr>
+																				</thead>
+																				<tbody> </tbody>
 																			</table>
 																		</div>
 																	</div>
@@ -290,12 +290,89 @@
 <script src="../assets/global/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
 <script src="../assets/global/plugins/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>
 <script src="assets/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>
-<script src="assets/plugins/grid/grid-0.5.6.min.js" type="text/javascript"></script>
+<script src="../assets/global/scripts/datatable.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/bootstrap-maxlength/bootstrap-maxlength.min.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script>
 <!-- END PAGE LEVEL PLUGINS -->
 
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script>
 var data0, grid0, dialog0;
+</script>
+<script type="text/javascript">
+ var grid;
+var iFilter = 1;
+
+var EcommerceOptions = function () {
+
+    var initPickers = function () {
+        //init date pickers
+        $('.date-picker').datepicker({
+            rtl: App.isRTL(),
+            autoclose: true
+        });
+    }
+
+    var handleOptions = function() {
+        grid = new Datatable();
+
+        grid.init({
+            src: $("#datatable_products"),
+            onSuccess: function (grid) {
+               
+            },
+            onError: function (grid) {
+                // execute some code on network or other general error  
+            },
+            loadingMessage: 'Loading...',
+            dataTable: { // here you can define a typical datatable settings from http://datatables.net/usage/options 
+
+                // Uncomment below line("dom" parameter) to fix the dropdown overflow issue in the datatable cells. The default datatable layout
+                // setup uses scrollable div(table-scrollable) with overflow:auto to enable vertical scroll(see: assets/global/scripts/datatable.js). 
+                // So when dropdowns used the scrollable div should be removed. 
+                //"dom": "<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'<'table-group-actions pull-right'>>r>t<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'>>",
+				
+				columnDefs: [ 
+					{ orderable: false, targets: [0] }
+				],
+				"bStateSave": true,
+                "lengthMenu": [
+                    [10, 20, 50, 100, 150],
+                    [10, 20, 50, 100, 150] // change per page values here 
+                ],
+                "pageLength": 20, // default record count per page
+                "ajax": {
+                    "url": "api/sp_catalog_attribute_options.phtml?attribute_id=<%=attribute_id%>", // ajax source
+                },
+                "order": [
+                    [1, "desc"]
+                ] // set first column as a default sort by asc
+            }
+        });
+		
+    }
+
+    return {
+
+        //main function to initiate the module
+        init: function () {
+
+            handleOptions();
+            initPickers();
+            
+        },
+		
+		 submitFilter: function () {
+
+            grid.submitFilter();
+        }
+
+    };
+
+}();
 </script>
 <script language="javascript">
 var savebutton = "1";
@@ -360,13 +437,6 @@ var FormValidation = function () {
 				warning1.hide();
 				
 				window.scrollTo(0,0);
-					
-				records = grid0.getAll();
-				pid = "";
-				$.each(records, function () {
-					 pid += this.record.OptionID + "||" + this.record.Name + "||" + this.record.Position + "||" + this.record.DisplayName + "%%";
-				});
-				$('#attribute_option_data').val(pid);
 				
 				$.ajax({
 					type: "POST",
@@ -402,79 +472,7 @@ var FormValidation = function () {
 <script>
 jQuery(document).ready(function() {
 	FormValidation.init();
-	//GRIDS
-	data0 = <%=s_data_option%>;
-	dialog0 = $("#dialog-option").dialog({
-		title: "Add/Edit Options",
-		autoOpen: false,
-		resizable: false,
-		width: '400px',
-		modal: true,
-		buttons: {
-			"Save": Save0,
-			"Cancel": function () { $(this).dialog("close"); }
-		}
-	});
-	
-	function Edit0(e) {
-		$("#ID").val(e.data.id);
-		$("#OptionID").val(e.data.record.OptionID);
-		$("#OptionName").val(e.data.record.Name);
-		$("#DisplayName").val(e.data.record.DisplayName);
-		$("#OptionPosition").val(e.data.record.Position);
-		$("#dialog-option").dialog("open");
-	}
-	function Delete0(e) {
-		if (confirm("Are you sure?")) {
-			grid0.removeRow(e.data.id);
-		}
-	}
-	function Save0() {
-		if ($.isNumeric($("#OptionPosition").val()))
-		{
-			sPostion = $("#OptionPosition").val();
-		}
-		else
-		{
-			sPostion = "0";
-		}
-		
-		if ($("#ID").val()) {
-			var id = parseInt($("#ID").val());
-			grid0.updateRow(id, { "ID": id, "OptionID": $("#OptionID").val(), "Name": $("#OptionName").val(), "Position": sPostion, "DisplayName": $("#DisplayName").val() });
-		} else {
-			grid0.addRow({ "ID": grid0.count() + 1, "OptionID": $("#OptionID").val(), "Name": $("#OptionName").val(), "Position": sPostion, "DisplayName": $("#DisplayName").val() });
-		}
-		$(this).dialog("close");
-	}
-	 
-	 
-	function Delete0(e) {
-		if (confirm("Are you sure?")) {
-			grid0.removeRow(e.data.id);
-		}
-	}
-	
-	grid0 = $("#grid0").grid({
-		dataSource: data0,
-		uiLibrary: "bootstrap",
-		columns: [
-			{ field: "Name", title: "Option Name" },
-			{ field: "DisplayName", title: "Display Name" },
-			{ field: "Position", title: "Position", width: 80 },
-			{ title: "", width: 40, type: "icon", icon: "glyphicon-pencil", tooltip: "Edit", events: { "click": Edit0 } },
-			{ title: "", width: 40, type: "icon", icon: "glyphicon-remove", tooltip: "Delete", events: { "click": Delete0 } }
-		]
-	});
-	
-	$("#btnAdd0").on("click", function () {
-		$("#ID").val("");
-		$("#OptionID").val("0");
-		$("#OptionName").val("");
-		$("#DisplayName").val("");
-		$("#OptionPosition").val("0");
-		$("#dialog-option").dialog("open");
-	});
+	EcommerceOptions.init();
 });
 </script>
 <!-- END PAGE LEVEL SCRIPTS -->
