--- a/core/checkout/include_cart_loop_start.phtml
+++ b/core/checkout/include_cart_loop_start.phtml
@@ -3,6 +3,7 @@
 	set rsCart = dbconn.Execute(sql)
 	do while not rsCart.EOF
 		g_cartRecordID = rsCart("RecordID")
+		g_cartProductID = rsCart("cartProductID")
 		g_cartProductName = rsCart("cartProductName")
 		g_cartProductSKU = rsCart("cartProductSKU")
 		g_cartOrderQuantity = rsCart("cartOrderQuantity")
@@ -11,4 +12,103 @@
 		g_cartProductUnitTotal = g_cartOrderQuantity * g_cartProductUnitPrice
 		g_cartProductUnitTotal = FormatNumber(g_cartProductUnitTotal,2)
 		g_basket_item_delete_link = "tp_cart.phtml?basket_action=D&recordid=" & rsCart("RecordID")
+		g_cartProductMode = rsCart("cartProductMode")
+		g_cartOptions = rsCart("cartOptions")
+		SELECT CASE g_cartProductMode
+		CASE 0 'Private Catalog
+			g_basket_item_link = g_store_url & "product.phtml?pf_id=" & g_cartProductID
+			sql = "SELECT * FROM " & g_storeid & "_product WHERE pf_id='" & g_cartProductID & "'"
+			Set rsCartItem = dbconn.Execute(sql)
+			If Not rsCartItem.EOF Then
+				prod_thumb_image = rsCartItem("thumb_image")
+				cart_dist_flag = rsCartItem("dist_flag")
+				cart_espec_sku = rsCartItem("espec_sku")
+				prod_espec_sku = rsCartItem("espec_sku")
+				prod_image_file = rsCartItem("image_file")
+				prod_use_icecat_images = rsCartItem("use_icecat_images")
+				prod_mm_type = rsCartItem("mm_type")
+				if Len(prod_image_file) > 0 then
+				else
+					prod_image_file = "--"
+				end If
+				
+				icecat_id = 0
+				if Len(prod_espec_sku) > 0 then
+					if Session("ENABLEINT") = "2" OR Session("ENABLEINT") = "3" then
+						sql = "SELECT * FROM A_ssprice_CA WHERE sku='" & prod_espec_sku & "'"
+					else
+						sql = "SELECT * FROM A_ssprice_main WHERE sku='" & prod_espec_sku & "'"
+					end If
+					set rsPA = conn_ss3.Execute(sql)
+					if not rsPA.EOF then
+						icecat_image_published = rsPA("image_published")
+						icecat_icategoryid = Trim(rsPA("CATEGORY"))
+						icecat_id = rsPA("icecat_id")
+					end if
+					rsPA.Close
+				end if
+				ssThumbSize = "upload/w_" & EC_thumbWidth & ",h_" & EC_thumbHeight & ",c_pad/"
+				ssImgSize = "upload/w_" & EC_imageWidth & ",h_" & EC_imageHeight & ",c_pad/"
+				ssZoomSize = "upload/w_" & EC_zoomWidth & ",h_" & EC_zoomHeight & ",c_pad/"
+				ssMiniCartSize = "upload/w_" & EC_miniCartWidth & ",h_" & EC_miniCartHeight & ",c_pad/"
+				
+				if prod_image_file = "--" then
+					cloudImg = g_noimage_url
+					ssImg = Replace(cloudImg, "upload/", ssImgSize)
+					ssImg1 = Replace(cloudImg, "upload/", ssThumbSize)
+					ssImg2 = Replace(cloudImg, "upload/", ssZoomSize)
+					ssImg_minicart = Replace(cloudImg, "upload/", ssMiniCartSize)
+				else
+					if prod_mm_type = 1 then
+						if Len(prod_espec_sku) > 0 AND prod_use_icecat_images = 1 then
+							
+							sql = "SELECT cloudinary_url FROM [192.168.5.134].[icecat].dbo.cloudinary_images WHERE product_id = " & icecat_id
+							Set rsCloudImage = conn_ss3.Execute(sql)
+							If Not rsCloudImage.EOF Then
+								cloudImg = Trim(rsCloudImage("cloudinary_url"))
+							Else
+								sql = "SELECT * FROM " & g_storeid & "_product_image WHERE image_name = '" & prod_image_file & "'"
+								Set rsCloudImage2 = conn.Execute(sql)
+								If Not rsCloudImage2.EOF Then
+									cloudImg = Trim(rsCloudImage2("cloud_url"))
+								Else
+									cloudImg = g_noimage_url
+								End If
+								rsCloudImage2.Close
+								Set rsCloudImage2 = Nothing
+							End If
+							rsCloudImage.Close
+							Set rsCloudImage = Nothing
+							ssImg = Replace(cloudImg, "upload/", ssImgSize)
+							ssImg1 = Replace(cloudImg, "upload/", ssThumbSize)
+							ssImg2 = Replace(cloudImg, "upload/", ssZoomSize)
+							ssImg_minicart = Replace(cloudImg, "upload/", ssMiniCartSize)
+						else
+							sql = "SELECT * FROM " & g_storeid & "_product_image WHERE image_name = '" & prod_image_file & "'"
+							Set rsCloudImage2 = dbconn.Execute(sql)
+							If Not rsCloudImage2.EOF Then
+								cloudImg = Trim(rsCloudImage2("cloud_url"))
+							Else
+								cloudImg = g_noimage_url
+							End If
+							rsCloudImage2.Close
+							Set rsCloudImage2 = Nothing
+							ssImg = Replace(cloudImg, "upload/", ssImgSize)
+							ssImg1 = Replace(cloudImg, "upload/", ssThumbSize)
+							ssImg2 = Replace(cloudImg, "upload/", ssZoomSize)
+							ssImg_minicart = Replace(cloudImg, "upload/", ssMiniCartSize)
+						end if
+					else
+						ssImg = "http://a4.res.cloudinary.com/dd3llssvr/image/fetch/" & "w_" & EC_imageWidth & ",h_" & EC_imageHeight & ",c_pad/" & g_store_url & "assets/pmedia/prod_img/" & Server.URLEncode(prod_thumb_image)
+						ssImg1 = "http://a4.res.cloudinary.com/dd3llssvr/image/fetch/" & "w_" & EC_thumbWidth & ",h_" & EC_thumbHeight & ",c_pad/" & g_store_url & "assets/pmedia/prod_img/" & Server.URLEncode(prod_thumb_image)
+						ssImg2 = "http://a4.res.cloudinary.com/dd3llssvr/image/fetch/" & "w_" & EC_zoomWidth & ",h_" & EC_zoomHeight & ",c_pad/" & g_store_url & "assets/pmedia/prod_img/" & Server.URLEncode(prod_thumb_image)
+					end if
+				end if
+				
+			End if
+			
+			ssImgInCart = ssImg1
+			ssImgInMiniCart = ssImg_minicart
+		CASE ELSE
+		END SELECT
 %>
