--- a/theme/journal4/receipt.phtml
+++ b/theme/journal4/receipt.phtml
@@ -1,10 +1,10 @@
 <%
 	Response.CodePage = 65001
 	Response.CharSet = "UTF-8"
-	g_route_page_id = "index"
+	g_route_page_id = "receipt"
 %>
 <!--#INCLUDE FILE="template_setting.phtml"-->
-<!--#INCLUDE FILE="../../core/include_index_start.phtml"-->
+<!--#INCLUDE FILE="../../core/checkout/include_receipt_start.phtml"-->
 <!DOCTYPE html>
 <html dir="ltr" lang="en" class="webkit chrome chrome53 win journal-desktop is-guest skin-4 header-center header-center-sticky product-grid-second-image product-list-second-image home-page layout-1 route-common-home oc2 one-column">
 <head>
@@ -15,11 +15,11 @@
 <header class="journal-header-center nolang-nocurr">
 <!--#INCLUDE FILE="include/header.phtml"-->
 </header>
-<!--#INCLUDE FILE="custom/index_top.phtml"-->
 <div class="extended-container">
-<!--#INCLUDE FILE="include/index.phtml"-->	
+<!--#INCLUDE FILE="include/receipt.phtml"-->
 </div>
 <footer class="boxed-footer">
+<!--#INCLUDE FILE="include/footer.phtml"-->
 </footer>
 <div class="scroll-top">
 </div>
@@ -28,5 +28,4 @@
 <!--#INCLUDE FILE="include/AbsoluteFooter.phtml"-->
 </body>
 </html>
-<!--#INCLUDE FILE="../../core/include_index_end.phtml"-->
-
+<!--#INCLUDE FILE="../../core/checkout/include_receipt_end.phtml"-->
