--- a/tp_cart.phtml
+++ b/tp_cart.phtml
@@ -14,6 +14,13 @@
         basket_action = Left(basket_action, 3)
     end if 
 	
+	'For Each sItem In Request.Form
+		'Response.Write(sItem)
+		'Response.Write(" - [" & Request.Form(sItem) & "]" & strLineBreak)
+	'Next
+	
+	'Response.end
+	
 	Select Case basket_action
 	CASE "U"
 		recordid = Trim(Request("recordid"))
