--- a/tp_login.phtml
+++ b/tp_login.phtml
@@ -82,126 +82,176 @@
 
                 Set x1Conn = Server.CreateObject("ADODB.Connection")
 				x1Conn.open g_connection_string
+				
+				sql = "SELECT password FROM " & g_storeid & "_shopper WHERE Email='" & str_uid & "'"
+				
+				set rsPassword = x1Conn.Execute(sql)
+				
+				if not rsPassword.EOF then
+					
+					t_password = rsPassword(0)
+					ar_t_password = Split(t_password, ":")
+					
+					sql = "SELECT * FROM " & g_storeid & "_shopper WHERE Email='" & str_uid & "' AND Password = CONVERT(NVARCHAR(32), HashBytes('MD5', '" & ar_t_password(1) & str_password & "'), 2) + ':' + '" & ar_t_password(1)  & "'"
+					
+					set rs=server.CreateObject("ADODB.Recordset")
+					rs.Open sql, g_connection_string
 			
- 				sql="SELECT * FROM " & g_storeid & "_shopper WHERE (Email='" & str_uid & "' AND Password='" & str_password & "')"
-				set rs=server.CreateObject("ADODB.Recordset")
-				rs.Open sql, g_connection_string
-		
-				if (not rs.EOF) then
-					Session("shopper_id") = rs("shopper_id")
-					'Session("ShoppingCartID") = rs("shopper_id")
+					if (not rs.EOF) then
 					
-					Shopper_Name = ""
-					if Len(rs("FirstName")) > 0 then
-						Shopper_Name = UCase(rs("FirstName"))& " "
-					end if
-					if Len(rs("LastName")) > 0 then
-						Shopper_Name = Shopper_Name & UCase(rs("LastName"))
-					end if
+						Session("shopper_id") = rs("shopper_id")
+						'Session("ShoppingCartID") = rs("shopper_id")
 					
-					shopper_state = rs("State")
-					shopper_zip = rs("ZipCode")
-					shopper_country = rs("Country")
+						Shopper_Name = ""
+						if Len(rs("FirstName")) > 0 then
+							Shopper_Name = UCase(rs("FirstName"))& " "
+						end if
+						if Len(rs("LastName")) > 0 then
+							Shopper_Name = Shopper_Name & UCase(rs("LastName"))
+						end if
 					
-					shopper_same_address = rs("IsSameAddress")
-					shipping_state = rs("shipping_State")
-					shipping_zip = rs("shipping_ZipCode")
-					shipping_country = rs("shipping_Country")
+						shopper_state = rs("State")
+						shopper_zip = rs("ZipCode")
+						shopper_country = rs("Country")
 					
-					if shopper_same_address then
-						shipping_state = shopper_state
-						shipping_zip = shopper_zip
-						shipping_country = shopper_country
-					end if
-					
-					favorite_link = rs("favorite_link")
-					
-					Session("Shopper_Name") = Shopper_Name
-					
-					Session("Shopper_State") = shipping_state
-					Session("Shopper_Zip") = shipping_zip
-					Session("shopper_country") = shipping_country
-					
-					Session("CartCountry") = shipping_country
-					Session("CartZone") = shipping_state
-					Session("CartPostCode") = shipping_zip 
-					
-					custom_price_profile = rs("custom_price_profile")
-					custom_catalog_id = Trim(rs("custom_catalog_id"))
-					
-					if Len(custom_catalog_id) > 1 then
-						csql = "SELECT enable_flag FROM " & g_storeid & "_custom_catalog WHERE catalog_id='" & custom_catalog_id & "'"
-						Set rs1 = x1Conn.Execute(csql)
-						If Not rs1.EOF Then
-							custom_catalog_id_flag = rs1(0)
-							Session("CUSTOM_CATALOG_ID_FLAG") = CStr(custom_catalog_id_flag)
-							If custom_catalog_id_flag = 0 Then
-								Session("CUSTOM_CATALOG_ID_FLAG") = ""
-							End If	
-						Else
-							Session("CUSTOM_CATALOG_ID_FLAG") = ""
-						End If
-						rs1.Close
-					else
-						Session("CUSTOM_CATALOG_ID_FLAG") = ""
-					end if
-
-					If custom_price_profile > 0 then
-						Session("LOGINGROUP") = CStr(custom_price_profile)
-					Else
-						Session("LOGINGROUP") = rs("member_group")
-					End if
-					
-					'Session("LOGINGROUP") = rs("member_group")
-					
-					if Len(rs("affiliate_id")) > 0 then
-					  Session("PARTNER") = rs("affiliate_id")
-					  Session("Expiration") = rs("DateEntered")
-
-					  if InStr(Session("PARTNER"), "OT") > 0 then
-						  Session("PARTNER") = ""
-						  Session("Expiration") = ""
-					  end if
-
-					  sql="SELECT disable FROM " & g_storeid & "_affiliate WHERE affiliate_id='" & rs("affiliate_id") & "'"
-
-					  set rsAff = x1Conn.execute(sql)
-						  if not rsAff.EOF then
-							  status = rsAff("disable")
-						  end if
-					  rsAff.close
-  					
-					  if status = 1 or status = 2 then
-						  Session("PARTNER") = ""
-						  Session("Expiration") = ""
-					  end if
-
-				  end if
-									
-					if Session("IMPRICE") = "1" then
-						imftp_id = rs("imftp_id")
+						shopper_same_address = rs("IsSameAddress")
+						shipping_state = rs("shipping_State")
+						shipping_zip = rs("shipping_ZipCode")
+						shipping_country = rs("shipping_Country")
 						
-						if Len(imftp_id) > 0 then
-							sql = "SELECT IMFTP_TableID FROM A_IMFTP WHERE IMFTP_ID=" & imftp_id
-							set rsx = x1Conn.Execute(sql)
-							if not rsx.EOF then
-								Session("IMFILEID") = Trim(rsx(0))
+						if shopper_same_address then
+							shipping_state = shopper_state
+							shipping_zip = shopper_zip
+							shipping_country = shopper_country
+						end if
+					
+						favorite_link = rs("favorite_link")
+						
+						Session("Shopper_Name") = Shopper_Name
+						
+						Session("Shopper_State") = shipping_state
+						Session("Shopper_Zip") = shipping_zip
+						Session("shopper_country") = shipping_country
+						
+						Session("CartCountry") = shipping_country
+						Session("CartZone") = shipping_state
+						Session("CartPostCode") = shipping_zip 
+						
+						custom_price_profile = rs("custom_price_profile")
+						custom_catalog_id = Trim(rs("custom_catalog_id"))
+					
+						if Len(custom_catalog_id) > 1 then
+							csql = "SELECT enable_flag FROM " & g_storeid & "_custom_catalog WHERE catalog_id='" & custom_catalog_id & "'"
+							Set rs1 = x1Conn.Execute(csql)
+							If Not rs1.EOF Then
+								custom_catalog_id_flag = rs1(0)
+								Session("CUSTOM_CATALOG_ID_FLAG") = CStr(custom_catalog_id_flag)
+								If custom_catalog_id_flag = 0 Then
+									Session("CUSTOM_CATALOG_ID_FLAG") = ""
+								End If	
+							Else
+								Session("CUSTOM_CATALOG_ID_FLAG") = ""
+							End If
+							rs1.Close
+						else
+							Session("CUSTOM_CATALOG_ID_FLAG") = ""
+						end if
+
+						If custom_price_profile > 0 then
+							Session("LOGINGROUP") = CStr(custom_price_profile)
+						Else
+							Session("LOGINGROUP") = rs("member_group")
+						End if
+					
+						'Session("LOGINGROUP") = rs("member_group")
+					
+						if Len(rs("affiliate_id")) > 0 then
+						  Session("PARTNER") = rs("affiliate_id")
+						  Session("Expiration") = rs("DateEntered")
+
+						  if InStr(Session("PARTNER"), "OT") > 0 then
+							  Session("PARTNER") = ""
+							  Session("Expiration") = ""
+						  end if
+
+						  sql="SELECT disable FROM " & g_storeid & "_affiliate WHERE affiliate_id='" & rs("affiliate_id") & "'"
+
+						  set rsAff = x1Conn.execute(sql)
+							  if not rsAff.EOF then
+								  status = rsAff("disable")
+							  end if
+						  rsAff.close
+						
+						  if status = 1 or status = 2 then
+							  Session("PARTNER") = ""
+							  Session("Expiration") = ""
+						  end if
+
+						end if
+									
+						if Session("IMPRICE") = "1" then
+							imftp_id = rs("imftp_id")
+							
+							if Len(imftp_id) > 0 then
+								sql = "SELECT IMFTP_TableID FROM A_IMFTP WHERE IMFTP_ID=" & imftp_id
+								set rsx = x1Conn.Execute(sql)
+								if not rsx.EOF then
+									Session("IMFILEID") = Trim(rsx(0))
+								else
+									Session("IMFILEID") = g_storeid
+								end if
+								rsx.Close
 							else
 								Session("IMFILEID") = g_storeid
 							end if
-							rsx.Close
-						else
-							Session("IMFILEID") = g_storeid
+												
 						end if
-											
-					end if
 
-					x1Conn.close
+						x1Conn.close
 					
-					err_msg = ""
-					bok = true
+						err_msg = ""
+						bok = true
 
-					if rs("new_customer") = 1 then
+						if rs("new_customer") = 1 then
+							Session("shopper_id") = ""
+							Session("LOGINGROUP") = "D"
+							Session("Shopper_Name") = ""
+							Session("Shopper_State") = ""
+							Session("Shopper_Zip") = ""
+							Session("shopper_country") = ""
+							
+							if Session("IMPRICE") = "1" then
+								Session("IMFILEID") = g_storeid
+							else
+								Session("IMFILEID") = ""
+							end if
+							
+							err_msg = "Your account has not been approved yet."
+							bok = false
+						end if
+					
+
+						if (Session("LoginOption") = "2") then
+						  if rs("confirmed") = 0 or rs("confirmed") = null then
+							  Session("shopper_id") = ""
+							  Session("LOGINGROUP") = "D"
+							  Session("Shopper_Name") = ""
+							  Session("Shopper_State") = ""
+							  Session("Shopper_Zip") = ""
+							  Session("shopper_country") = ""
+							
+							  if Session("IMPRICE") = "1" then
+								  Session("IMFILEID") = g_storeid
+							  else
+								  Session("IMFILEID") = ""
+							  end if
+							
+							  err_msg = "Your account has not been approved yet."
+							  bok = false
+						  end if
+						end if
+
+					else
 						Session("shopper_id") = ""
 						Session("LOGINGROUP") = "D"
 						Session("Shopper_Name") = ""
@@ -215,31 +265,10 @@
 							Session("IMFILEID") = ""
 						end if
 						
-						err_msg = "Your account has not been approved yet."
+						err_msg = "Please verify your login information."
 						bok = false
 					end if
-					
-
-					if (Session("LoginOption") = "2") then
-					  if rs("confirmed") = 0 or rs("confirmed") = null then
-						  Session("shopper_id") = ""
-						  Session("LOGINGROUP") = "D"
-						  Session("Shopper_Name") = ""
-						  Session("Shopper_State") = ""
-						  Session("Shopper_Zip") = ""
-						  Session("shopper_country") = ""
-  						
-						  if Session("IMPRICE") = "1" then
-							  Session("IMFILEID") = g_storeid
-						  else
-							  Session("IMFILEID") = ""
-						  end if
-  						
-						  err_msg = "Your account has not been approved yet."
-						  bok = false
-					  end if
-					end if
-
+				
 				else
 					Session("shopper_id") = ""
 					Session("LOGINGROUP") = "D"
@@ -247,13 +276,6 @@
 					Session("Shopper_State") = ""
 					Session("Shopper_Zip") = ""
 					Session("shopper_country") = ""
-					
-					if Session("IMPRICE") = "1" then
-						Session("IMFILEID") = g_storeid
-					else
-						Session("IMFILEID") = ""
-					end if
-					
 					err_msg = "Please verify your login information."
 					bok = false
 				end if
